// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button Controls > should render a block size button 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"tl-absolute tl-select-none tl-z-24 tl-w-280px tl-font-sans tl-text-xs\\">
  <div tabindex=\\"0\\" class=\\"tl-shadow-xl tl-rounded tl-border-4 tl-border-solid tl-bg-primary tl-border-primary tl-overflow-hidden tl-w-full tl-h-full tl-flex tl-flex-col tl-justify-between\\">
    <header class=\\"tl-relative tl-cursor-grabbing tl-p-4 tl-flex tl-justify-evenly tl-text-gray-200\\"><i class=\\"tl-cta-icon tl-bg-secondary\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i></div><i class=\\"tl-cta-icon tl-bg-secondary\\">🌙</i>
    </header>
    <!--v-if-->
    <div class=\\"tl-p-2 tl-inline-flex\\"><button data-v-9a5f9367=\\"\\" class=\\"leches-btn leches-btn-primary leches-btn-block\\"><i data-v-9a5f9367=\\"\\" class=\\"mr-1\\"></i> Accept</button></div>
  </div>
</div>"
`;

exports[`Button Controls > should render a button 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"tl-absolute tl-select-none tl-z-24 tl-w-280px tl-font-sans tl-text-xs\\">
  <div tabindex=\\"0\\" class=\\"tl-shadow-xl tl-rounded tl-border-4 tl-border-solid tl-bg-primary tl-border-primary tl-overflow-hidden tl-w-full tl-h-full tl-flex tl-flex-col tl-justify-between\\">
    <header class=\\"tl-relative tl-cursor-grabbing tl-p-4 tl-flex tl-justify-evenly tl-text-gray-200\\"><i class=\\"tl-cta-icon tl-bg-secondary\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i></div><i class=\\"tl-cta-icon tl-bg-secondary\\">🌙</i>
    </header>
    <!--v-if-->
    <div class=\\"tl-p-2 tl-inline-flex\\"><button data-v-9a5f9367=\\"\\" class=\\"leches-btn leches-btn-primary leches-btn-sm\\"><i data-v-9a5f9367=\\"\\" class=\\"mr-1\\"></i> Accept</button></div>
  </div>
</div>"
`;

exports[`Button Controls > should render a button with a label 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"tl-absolute tl-select-none tl-z-24 tl-w-280px tl-font-sans tl-text-xs\\">
  <div tabindex=\\"0\\" class=\\"tl-shadow-xl tl-rounded tl-border-4 tl-border-solid tl-bg-primary tl-border-primary tl-overflow-hidden tl-w-full tl-h-full tl-flex tl-flex-col tl-justify-between\\">
    <header class=\\"tl-relative tl-cursor-grabbing tl-p-4 tl-flex tl-justify-evenly tl-text-gray-200\\"><i class=\\"tl-cta-icon tl-bg-secondary\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i></div><i class=\\"tl-cta-icon tl-bg-secondary\\">🌙</i>
    </header>
    <!--v-if-->
    <div class=\\"tl-p-2 tl-inline-flex\\"><button data-v-9a5f9367=\\"\\" class=\\"leches-btn leches-btn-primary leches-btn-sm\\"><i data-v-9a5f9367=\\"\\" class=\\"mr-1\\"></i> Accept</button></div>
  </div>
</div>"
`;

exports[`Button Controls > should render a large button 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"tl-absolute tl-select-none tl-z-24 tl-w-280px tl-font-sans tl-text-xs\\">
  <div tabindex=\\"0\\" class=\\"tl-shadow-xl tl-rounded tl-border-4 tl-border-solid tl-bg-primary tl-border-primary tl-overflow-hidden tl-w-full tl-h-full tl-flex tl-flex-col tl-justify-between\\">
    <header class=\\"tl-relative tl-cursor-grabbing tl-p-4 tl-flex tl-justify-evenly tl-text-gray-200\\"><i class=\\"tl-cta-icon tl-bg-secondary\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i></div><i class=\\"tl-cta-icon tl-bg-secondary\\">🌙</i>
    </header>
    <!--v-if-->
    <div class=\\"tl-p-2 tl-inline-flex\\"><button data-v-9a5f9367=\\"\\" class=\\"leches-btn leches-btn-primary leches-btn-lg\\"><i data-v-9a5f9367=\\"\\" class=\\"mr-1\\"></i> Accept</button></div>
  </div>
</div>"
`;

exports[`Button Controls > should render a primary button variant by default 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"tl-absolute tl-select-none tl-z-24 tl-w-280px tl-font-sans tl-text-xs\\">
  <div tabindex=\\"0\\" class=\\"tl-shadow-xl tl-rounded tl-border-4 tl-border-solid tl-bg-primary tl-border-primary tl-overflow-hidden tl-w-full tl-h-full tl-flex tl-flex-col tl-justify-between\\">
    <header class=\\"tl-relative tl-cursor-grabbing tl-p-4 tl-flex tl-justify-evenly tl-text-gray-200\\"><i class=\\"tl-cta-icon tl-bg-secondary\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i></div><i class=\\"tl-cta-icon tl-bg-secondary\\">🌙</i>
    </header>
    <!--v-if-->
    <div class=\\"tl-p-2 tl-inline-flex\\"><button data-v-9a5f9367=\\"\\" class=\\"leches-btn leches-btn-primary leches-btn-sm\\"><i data-v-9a5f9367=\\"\\" class=\\"mr-1\\"></i> Accept</button></div>
  </div>
</div>"
`;

exports[`Button Controls > should render a secondary button variant 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"tl-absolute tl-select-none tl-z-24 tl-w-280px tl-font-sans tl-text-xs\\">
  <div tabindex=\\"0\\" class=\\"tl-shadow-xl tl-rounded tl-border-4 tl-border-solid tl-bg-primary tl-border-primary tl-overflow-hidden tl-w-full tl-h-full tl-flex tl-flex-col tl-justify-between\\">
    <header class=\\"tl-relative tl-cursor-grabbing tl-p-4 tl-flex tl-justify-evenly tl-text-gray-200\\"><i class=\\"tl-cta-icon tl-bg-secondary\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i></div><i class=\\"tl-cta-icon tl-bg-secondary\\">🌙</i>
    </header>
    <!--v-if-->
    <div class=\\"tl-p-2 tl-inline-flex\\"><button data-v-9a5f9367=\\"\\" class=\\"leches-btn leches-btn-secondary leches-btn-sm\\"><i data-v-9a5f9367=\\"\\" class=\\"mr-1\\"></i> Accept</button></div>
  </div>
</div>"
`;

exports[`Button Controls > should render a small button 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"tl-absolute tl-select-none tl-z-24 tl-w-280px tl-font-sans tl-text-xs\\">
  <div tabindex=\\"0\\" class=\\"tl-shadow-xl tl-rounded tl-border-4 tl-border-solid tl-bg-primary tl-border-primary tl-overflow-hidden tl-w-full tl-h-full tl-flex tl-flex-col tl-justify-between\\">
    <header class=\\"tl-relative tl-cursor-grabbing tl-p-4 tl-flex tl-justify-evenly tl-text-gray-200\\"><i class=\\"tl-cta-icon tl-bg-secondary\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i></div><i class=\\"tl-cta-icon tl-bg-secondary\\">🌙</i>
    </header>
    <!--v-if-->
    <div class=\\"tl-p-2 tl-inline-flex\\"><button data-v-9a5f9367=\\"\\" class=\\"leches-btn leches-btn-primary leches-btn-sm\\"><i data-v-9a5f9367=\\"\\" class=\\"mr-1\\"></i> Accept</button></div>
  </div>
</div>"
`;

exports[`Button Controls > should render an icon on the button 1`] = `
"<div style=\\"left: 704px; top: 10px;\\" class=\\"tl-absolute tl-select-none tl-z-24 tl-w-280px tl-font-sans tl-text-xs\\">
  <div tabindex=\\"0\\" class=\\"tl-shadow-xl tl-rounded tl-border-4 tl-border-solid tl-bg-primary tl-border-primary tl-overflow-hidden tl-w-full tl-h-full tl-flex tl-flex-col tl-justify-between\\">
    <header class=\\"tl-relative tl-cursor-grabbing tl-p-4 tl-flex tl-justify-evenly tl-text-gray-200\\"><i class=\\"tl-cta-icon tl-bg-secondary\\">🍰</i>
      <div><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i><i class=\\"i-ic-baseline-drag-indicator tl-bg-secondary\\"></i></div><i class=\\"tl-cta-icon tl-bg-secondary\\">🌙</i>
    </header>
    <!--v-if-->
    <div class=\\"tl-p-2 tl-inline-flex\\"><button data-v-9a5f9367=\\"\\" class=\\"leches-btn leches-btn-primary leches-btn-sm\\"><i data-v-9a5f9367=\\"\\" class=\\"i-carbon-checkmark mr-1\\"></i> Accept</button></div>
  </div>
</div>"
`;
